--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Validate input data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/walik91/input-data-validate/issues"
   },
-  "homepage": "https://github.com/walik91/input-data-validate#readme"
+  "homepage": "https://github.com/walik91/input-data-validate#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0"
+  }
 }
